[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nfs"
version = "0.2.0"
description = "Near Field Scanner utilities and CLI"
readme = "README.md"
requires-python = "==3.13.5"
license = { text = "Proprietary" }
authors = [{ name = "Your Name" }]
keywords = ["near-field", "scanner", "measurement"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent"
]

dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "loguru",
  "grbl-streamer>=2.0.2",
  "pyfar>=0.7.3",
  "sounddevice>=0.5.3",
]

[project.optional-dependencies]
dev = ["pytest", "pylint", "mypy"]

[project.scripts]
nfs-app = "nfs.nfs_app:main"

[project.entry-points."nfs.measurement_points"]
cylindrical = "nfs.plugins.cylindrical_measurement_points:register"
spherical = "nfs.plugins.spherical_measurement_points:register"
spherical_arcs_random = "nfs.plugins.spherical_measurement_points_arcs_random:register"
file = "nfs.plugins.file_measurement_points:register"

[project.entry-points."nfs.audio"]
mock_interface = "nfs.audio:MockInterfaceAudio"

[project.entry-points."nfs.motion_managers"]
cylindrical = "nfs.motion_manager:CylindricalMeasurementMotionManager"
spherical = "nfs.motion_manager:SphericalMeasurementMotionManager"

[tool.setuptools.packages.find]
where = ["src"]
include = ["nfs*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
nfs = ["config.ini"]

[tool.setuptools.exclude-package-data]
"*" = ["*.log", "*.gcode"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "sphinx>=9.1.0",
    "sphinx-autodoc-typehints>=3.9.11",
    "sphinx-rtd-theme>=3.1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
